1) Created selectivity gear based on an array rather than a formula (useful to import MERA) 2) Created a set of files to import MERA age structure easily through yaml files

--- a/inputs/YAML Samples/components/Gear.yaml
+++ b/inputs/YAML Samples/components/Gear.yaml
@@ -49,6 +49,15 @@ Simple Logistic Selectivity Gear:
   selexParameter1: '15.0948823'
   selexParameter2: '0.5391'
 -------
+Selectivity from List Gear:
+  averageCatchability: '1.0E-4'
+  litersOfGasConsumedPerHour: '0.0'
+  numberOfSubdivisions: 1
+  selectivityPerBin:
+  - 0.0
+  - 0.0
+  - 0.0
+-------
 Simple Dome Shaped Selectivity Gear:
   averageCatchability: '0.0'
   lengthFullSelectivity: '30.0'
