--- a/build.gradle
+++ b/build.gradle
@@ -179,14 +179,14 @@ task optimizerConsoleJar(type: com.github.jengelman.gradle.plugins.shadow.tasks.
 
 task calicatchFatJar(type: com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar) {
     mergeServiceFiles()
-    archiveFileName = 'calicatch.jar'
+    archiveFileName = 'salehbaycalibration.jar'
     from sourceSets.main.output //tells the task to include the project code
         project.configurations.implementation.canBeResolved = true
     configurations = [project.configurations.implementation]
 
     //tells the task to shadow in the jars files in the 'runtime' scope
     manifest {
-        attributes 'Main-Class': 'uk.ac.ox.oxfish.experiments.CaliCatchCalibration'
+        attributes 'Main-Class': 'uk.ac.ox.oxfish.experiments.mera.comparisons.SalehBayOneSpeciesCalibration'
     }
 }
 
