--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -11,5 +11,5 @@ jobs:
       - name: Lint Code Base
         uses: github/super-linter@v4.2.2
         env:
-          validate_all_codebase: true
+          VALIDATE_ALL_CODEBASE: false
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
