--- a/build.gradle
+++ b/build.gradle
@@ -253,6 +253,18 @@ task fatJarMeraSlice1(type: com.github.jengelman.gradle.plugins.shadow.tasks.Sha
     }
 }
 
+task fatJarSalehBay(type: com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar) {
+    mergeServiceFiles()
+    archiveFileName = 'oxfish_salehbay.jar'
+    from sourceSets.main.output //tells the task to include the project code
+    project.configurations.implementation.canBeResolved = true
+    configurations = [project.configurations.implementation]
+    //tells the task to shadow in the jars files in the 'runtime' scope
+    manifest {
+        attributes 'Main-Class': 'uk.ac.ox.oxfish.experiments.mera.comparisons.SalehBayCalibration'
+    }
+}
+
 task  q(type: com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar) {
     mergeServiceFiles()
     archiveFileName = 'oxfish_nodata718slice7.jar'
