--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,12 @@ dependencies {
 
     //logger:
     implementation "com.esotericsoftware:minlog:1.3.0"
+
+    // Dependencies for log4j2. commons-csv is needed for CSV logs
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.14.1'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.14.1'
+    implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.8'
+
     //serializer
     implementation fileTree(dir: 'libs/xstream/lib', include: '*.jar')
     implementation "org.ogce:xpp3:1.1.6"
