--- a/inputs/epo/epo.yaml
+++ b/inputs/epo/epo.yaml
@@ -1,20 +1,50 @@
 EPO:
+  abundanceCatchSamplersFactory:
+    abundanceFilters: null
+    catchSamplesFile: inputs/tuna/set_samples.csv
+  abundanceFiltersFactory:
+    selectivityFilePath: inputs/epo/selectivity.csv
   abundanceInitializerFactory:
     Abundance Initializer Factory:
       binsFilePath: inputs/epo/bins.csv
-  abundanceReallocatorFactory:
-    Abundance Reallocator:
-      biomassDistributionsFilePath: inputs/epo/grids.csv
-      firstLargeBinPerSpecies:
-        Skipjack tuna: 14
-        Bigeye tuna: 8
-        Yellowfin tuna: 9
+  abundanceReallocatorFactory: !!uk.ac.ox.oxfish.biology.tuna.AbundanceReallocatorFactory
+    biomassDistributionsFilePath: inputs/epo/grids.csv
+    firstLargeBinPerSpecies:
+      Skipjack tuna: 14
+      Bigeye tuna: 8
+      Yellowfin tuna: 9
   abundanceRestorerFactory:
     schedule:
       0: 364
   fadMapFactory:
     currentFiles:
       Y2017: inputs/epo/currents_2017.csv
+  fishingStrategyFactory:
+    catchSamplersFactory: null
+    dolphinSetActionLogisticMidpoint: 0.1
+    dolphinSetActionLogisticSteepness: 1.0
+    dolphinSetDetectionProbability: 0.1
+    dolphinSetGeneratorLogisticMidpoint: 100000.0
+    dolphinSetGeneratorLogisticSteepness: 1.0
+    fadDeploymentActionDecayConstant: 1.0
+    fadDeploymentActionLogisticMidpoint: 0.1
+    fadDeploymentActionLogisticSteepness: 1.0
+    fadSetActionLogisticMidpoint: 0.1
+    fadSetActionLogisticSteepness: 1.0
+    movingThreshold: 0.1
+    nonAssociatedSetActionLogisticMidpoint: 0.1
+    nonAssociatedSetActionLogisticSteepness: 1.0
+    nonAssociatedSetDetectionProbability: 0.1
+    nonAssociatedSetGeneratorLogisticMidpoint: 100000.0
+    nonAssociatedSetGeneratorLogisticSteepness: 1.0
+    opportunisticFadSetActionLogisticMidpoint: 0.1
+    opportunisticFadSetActionLogisticSteepness: 1.0
+    opportunisticFadSetDetectionProbability: 0.1
+    searchActionDecayConstant: 1.0
+    searchActionLogisticMidpoint: 0.1
+    searchActionLogisticSteepness: 1.0
+    searchBonus: 0.1
+    setCompositionWeightsPath: inputs/tuna/set_compositions.csv
   mapInitializerFactory:
     From File Map:
       gridWidthInCell: '101.0'
