--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,12 @@ plugins {
     id 'idea'
     id 'application'
     id 'jacoco'
-    id 'com.github.johnrengelman.shadow' version '6.1.0'
+    id "com.github.johnrengelman.shadow" version "7.1.0"
     id "com.github.spotbugs" version "4.7.2"
 }
 
 application {
-    mainClassName = 'uk.ac.ox.oxfish.Main'
+    mainClass = 'uk.ac.ox.oxfish.Main'
     applicationDefaultJvmArgs = ["-Xms1024m", "-Xmx2048m"]
 }
 
@@ -64,8 +64,8 @@ dependencies {
     implementation "com.esotericsoftware:minlog:1.3.0"
 
     // Dependencies for log4j2. commons-csv is needed for CSV logs
-    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.14.1'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.14.1'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.14.1'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.14.1'
     implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.8'
 
     //serializer
