--- a/inputs/tests/epo.yaml
+++ b/inputs/tests/epo.yaml
@@ -32,17 +32,6 @@ EPO Abundance:
       }
     fadDeploymentPctActiveFadsLimitLogisticMidpoint: 0.5
     fadDeploymentPctActiveFadsLimitLogisticSteepness: 1.0
-    fadInitializerFactory:
-      attractionIntercepts: {
-        }
-      biomassInteractionsCoefficients: {
-        }
-      fishReleaseProbabilityInPercent: '0.0'
-      growthRates: {
-        }
-      tileBiomassCoefficients: {
-        }
-      totalCarryingCapacity: '445000.0'
     fadSetObservers: !!set {
       }
     locationValuesFile: inputs/epo/location_values.csv
@@ -73,6 +62,27 @@ EPO Abundance:
       0: 364
   attractionWeightsFile: inputs/epo/action_weights.csv
   costsFile: inputs/epo/costs.csv
+  fadInitializerFactory:
+    attractableBiomassCoefficients:
+      Bigeye tuna: '0.0'
+      Yellowfin tuna: '0.0'
+      Skipjack tuna: '0.0'
+    biomassInteractionsCoefficients:
+      Bigeye tuna: '0.0'
+      Yellowfin tuna: '0.0'
+      Skipjack tuna: '0.0'
+    compressionExponents:
+      Bigeye tuna: '0.0'
+      Yellowfin tuna: '0.0'
+      Skipjack tuna: '0.0'
+    fishReleaseProbabilityInPercent: '0.0'
+    growthRates:
+      Bigeye tuna: '0.0'
+      Yellowfin tuna: '0.0'
+      Skipjack tuna: '0.0'
+    selectivityFilters: null
+    speciesCodes: null
+    totalCarryingCapacity: '445000.0'
   fadMapFactory:
     currentFiles:
       Y2017: inputs/epo/currents/currents_2017.csv
