--- a/inputs/tests/epo.yaml
+++ b/inputs/tests/epo.yaml
@@ -65,22 +65,22 @@ EPO Abundance:
   fadInitializerFactory:
     Abundance FAD Initializer:
       attractableBiomassCoefficients:
-        Bigeye tuna: 0.0
-        Yellowfin tuna: 0.0
-        Skipjack tuna: 0.0
+        Bigeye tuna: '0.0'
+        Yellowfin tuna: '0.0'
+        Skipjack tuna: '0.0'
       biomassInteractionsCoefficients:
-        Bigeye tuna: 0.0
-        Yellowfin tuna: 0.0
-        Skipjack tuna: 0.0
+        Bigeye tuna: '0.0'
+        Yellowfin tuna: '0.0'
+        Skipjack tuna: '0.0'
       compressionExponents:
-        Bigeye tuna: 0.0
-        Yellowfin tuna: 0.0
-        Skipjack tuna: 0.0
+        Bigeye tuna: '0.0'
+        Yellowfin tuna: '0.0'
+        Skipjack tuna: '0.0'
       fishReleaseProbabilityInPercent: '0.0'
       growthRates:
-        Bigeye tuna: 0.0
-        Yellowfin tuna: 0.0
-        Skipjack tuna: 0.0
+        Bigeye tuna: '0.0'
+        Yellowfin tuna: '0.0'
+        Skipjack tuna: '0.0'
       selectivityFilters: {
         }
       speciesCodes: null
