(i)Created an ExogenousFadMaker class to drop unowned fads at timed intervals around coordinates read from the CSV; a required element for a no-boats tuna run. This necessitated a bunch of half-hassed modifications of the FAD classes such that they could be deployed without being owned. (ii) created a JCommander calibration console for Tuna calibration to help with console commands (iii) created a few ancilliary FAD factories that come in handy for testing fad movement outside of the giant tuna scenario

--- a/inputs/YAML Samples/components/AdditionalStartable.yaml
+++ b/inputs/YAML Samples/components/AdditionalStartable.yaml
@@ -138,7 +138,7 @@ Json Output Manager:
     typeId: 0
   scenarioDescription: Scenario description
   scenarioTitle: Scenario title
-  startDate: '2021-06-16'
+  startDate: '2022-02-18'
   vesselsBuilderFactory:
     vesselClassifier: {
       }
@@ -264,4 +264,46 @@ Schaefer Assessment Formula Controller:
 -------
 Simple Fisher Sampler:
   percentageSampled: '0.025'
+-------
+Scheduled Biomass Processes
+-------
+Biomass Restorer:
+  biomassReallocator: null
+  schedule:
+    0: 364
+-------
+Exogenous Fad Maker CSV:
+  fadInitializer:
+    Biomass FAD Initializer:
+      attractableBiomassCoefficients:
+        Species 0: '0.0'
+      biomassInteractionsCoefficients:
+        Species 0: '0.0'
+      compressionExponents:
+        Species 0: '0.0'
+      fishReleaseProbabilityInPercent: '0.0'
+      growthRates:
+        Species 0: '0.0'
+      speciesCodes: null
+      totalCarryingCapacity: '445000.0'
+  pathToFile: ./inputs/tests/fad_dummy_deploy.csv
+-------
+Fad Demo:
+  biomassOnly: false
+  fadInitializer:
+    Biomass FAD Initializer:
+      attractableBiomassCoefficients:
+        Species 0: '0.0'
+      biomassInteractionsCoefficients:
+        Species 0: '0.0'
+      compressionExponents:
+        Species 0: '0.0'
+      fishReleaseProbabilityInPercent: '0.0'
+      growthRates:
+        Species 0: '0.0'
+      speciesCodes: null
+      totalCarryingCapacity: '445000.0'
+  fixedXCurrent: '-1.0'
+  fixedYCurrent: '1.0'
+  pathToFile: ./inputs/tests/fad_dummy_deploy.csv
 -------
