--- a/inputs/YAML Samples/scenario/Abstract.yaml
+++ b/inputs/YAML Samples/scenario/Abstract.yaml
@@ -40,6 +40,9 @@ Abstract:
   fishingStrategy:
     Until Full With Day Limit:
       daysAtSea: '5.0'
+      delegate:
+        Fish Until Full:
+          minimumPercentageFull: '1.0'
   fuelTankSize: '100000.0'
   gasPricePerLiter: '0.01'
   gear:
