--- a/inputs/YAML Samples/scenario/California Map Scenario.yaml
+++ b/inputs/YAML Samples/scenario/California Map Scenario.yaml
@@ -29,6 +29,9 @@ California Map Scenario:
   fishingStrategy:
     Until Full With Day Limit:
       daysAtSea: '5.0'
+      delegate:
+        Fish Until Full:
+          minimumPercentageFull: '1.0'
   fixedRecruitmentDistribution: false
   fuelTankInLiters: '45519.577'
   gasPriceMaker:
@@ -129,7 +132,8 @@ California Map Scenario:
       predicates: [
         ]
   portFileName: dts_ports_2011.csv
-  priceMap: Dover Sole:0.6698922,Sablefish:4.3235295,Shortspine Thornyhead:1.0428510,Longspine Thornyhead:1.0428510,Yelloweye Rockfish:1.0754502,Others:1.7646181
+  priceMap: Dover Sole:0.6698922,Sablefish:4.3235295,Shortspine Thornyhead:1.0428510,Longspine
+    Thornyhead:1.0428510,Yelloweye Rockfish:1.0754502,Others:1.7646181
   recruitmentNoise: '0.0'
   regulationPostReset:
     Multi-Quotas from Map:
