--- a/inputs/YAML Samples/scenario/Flexible.yaml
+++ b/inputs/YAML Samples/scenario/Flexible.yaml
@@ -44,6 +44,9 @@ Flexible:
     fishingStrategy:
       Until Full With Day Limit:
         daysAtSea: '5.0'
+        delegate:
+          Fish Until Full:
+            minimumPercentageFull: '1.0'
     fuelTankSize: '100000.0'
     gear:
       Random Catchability:
