--- a/build.gradle
+++ b/build.gradle
@@ -103,7 +103,7 @@ dependencies {
 
     //testing:
     testImplementation "junit:junit:4.13.2"
-    testImplementation 'org.mockito:mockito-core:3.11.2'
+    testImplementation 'org.mockito:mockito-core:4.3.1'
     testImplementation 'nl.jqno.equalsverifier:equalsverifier:3.7'
 
     //guava. Useful for PreConditions and sometimes specialized collections
@@ -297,7 +297,7 @@ task fatJarTunaCalibrator(type: com.github.jengelman.gradle.plugins.shadow.tasks
     configurations = [project.configurations.implementation]
     //tells the task to shadow in the jars files in the 'runtime' scope
     manifest {
-        attributes 'Main-Class': 'uk.ac.ox.oxfish.maximization.TunaCalibrator'
+        attributes 'Main-Class': 'uk.ac.ox.oxfish.maximization.TunaCalibrationConsole'
     }
 }
 
