--- a/inputs/YAML Samples/components/DepartingStrategy.yaml
+++ b/inputs/YAML Samples/components/DepartingStrategy.yaml
@@ -43,6 +43,10 @@ Unified Amateurish Dynamic Programming:
 Max Hours Per Year:
   maxHoursOut: '1200.0'
 -------
+Max Hours Per Year Plus Resting Time:
+  hoursBetweenEachDeparture: '12.0'
+  maxHoursOut: '1200.0'
+-------
 WFS Longline:
   intercept: '-3.626'
   summer: '0.439'
