--- a/inputs/YAML Samples/scenario/Generalized.yaml
+++ b/inputs/YAML Samples/scenario/Generalized.yaml
@@ -39,6 +39,9 @@ Generalized:
   fishingStrategy:
     Until Full With Day Limit:
       daysAtSea: '5.0'
+      delegate:
+        Fish Until Full:
+          minimumPercentageFull: '1.0'
   fuelTankSize: '100000.0'
   gasPricePerLiter: '0.01'
   gear:
